# silversnail

./: build_plugins.sh
demo-plugin/: Cargo.toml
demo-plugin/src/: lib.rs
host/: .gitignore  Cargo.toml
host-native/src/: main.rs
host-web/: index.html  index.js
plugins/plug-add/: Cargo.toml
plugins/plug-add/src/: lib.rs
plugins/plug-blue/: Cargo.toml
plugins/plug-blue/src/: lib.rs
plugins/plug-mul/: Cargo.toml
plugins/plug-mul/src/: lib.rs
plugins/plug-red/: Cargo.toml
plugins/plug-red/src/: lib.rs
plugins/plug-std/: Cargo.toml
plugins/plug-std/src/: color.rs  framebuffer.rs  lib.rs
silversnail/: Cargo.toml  LICENSE  LICENSE-MIT  README.md
silversnail-native/: Cargo.toml
silversnail-native/src/: main.rs
silversnail-web/: webpack.config.js
silversnail-web/crate/: .gitignore  Cargo.toml
silversnail-web/crate/src/: lib.rs  renderer.rs
silversnail-web/src/: index.html  index.js
silversnail/src/: lib.rs  renderer.rs
silversnail/src/glowrap/: buffer.rs  draw.rs  mod.rs  program.rs  state.rs  vao.rs
silversnail/src/shaders/: test.fs  test.vs
silversnail/src/web/: mod.rs
web-tester/: package-lock.json  package.json  webpack.config.js
web-tester/src/: index.js  index.scss
