[package]
name = "silversnail-native"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.7.1"
image = "0.22.1"
glutin = "0.22.0-alpha3"
silversnail = { path = "../silversnail" }
