[package]
name = "silversnail-web"
version = "0.1.0"
authors = ["nasso <nassomails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
silversnail = { path = "../../silversnail" }
js-sys = "0.3.27"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.50"
cfg-if = "0.1.9"
log = "0.4.8"
console_log = { version = "0.1.2", optional = true }

[dependencies.web-sys]
version = "0.3.27"
features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "console"
]

[features]
default = ["console_log"]
